--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.2.4",
+    "axios": "^0.27.2",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.4.3",
+    "redux-thunk": "^2.4.1",
+    "react-scripts": "5.0.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   },
